<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    android:label="@string/app_name"
    app:startDestination="@id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="br.eti.rafaelcouto.cryptocap.view.fragment.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home">

        <argument
            android:name="isComparing"
            android:defaultValue="false"
            app:argType="boolean"/>

        <action
            android:id="@+id/fragmentHome_to_fragmentDetails"
            app:destination="@id/fragment_details" />
    </fragment>

    <fragment
        android:id="@+id/fragment_details"
        android:name="br.eti.rafaelcouto.cryptocap.view.fragment.CryptoDetailsFragment"
        android:label="@string/details_title"
        tools:layout="@layout/fragment_crypto_details">

        <argument
            android:name="id"
            app:argType="long"/>

        <action
            android:id="@+id/fragmentDetails_to_fragmentCompare"
            app:destination="@id/fragment_compare" />

        <action
            android:id="@+id/fragmentDetails_to_fragmentCompareSelect"
            app:destination="@id/fragment_compare_select" />
    </fragment>

    <fragment
        android:id="@+id/fragment_compare_select"
        android:name="br.eti.rafaelcouto.cryptocap.view.fragment.HomeFragment"
        android:label="@string/compare_selection_title"
        tools:layout="@layout/fragment_home">

        <argument
            android:name="isComparing"
            app:argType="boolean"/>
    </fragment>

    <fragment
        android:id="@+id/fragment_compare"
        android:name="br.eti.rafaelcouto.cryptocap.view.fragment.CryptoCompareFragment"
        android:label="@string/compare_title"
        tools:layout="@layout/fragment_crypto_compare">

        <argument
            android:name="fromId"
            app:argType="long"/>

        <argument
            android:name="toId"
            app:argType="long"/>
    </fragment>
</navigation>
